--- a/package.json
+++ b/package.json
@@ -9,5 +9,11 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.9.8"
+  },
+  "engines": {
+    "node": "8.10.0"
+  }
 }
